Implementação de devolução de carro.
