# src/swagger.json
@@ -9,11 +9,46 @@
         }
     },
     "paths": {
+        "/sessions": {
+            "post": {
+                "tags": ["Session"],
+                "summary":"Authentication user",
+                "description": "Authentication user",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "400": {
+                        "description": "Email or password incorrect!"
+                    }
+                }
+            }
+        },
         "/categories": {
             "post": {
                 "tags": ["Category"],
                 "summary": "Create a category",
                 "description": "Create a new category",
+                "security": [
+                    {"bearerAuth": []}
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -39,7 +74,7 @@
                     "201": {
                         "description": "Created"
                     },
-                    "500": {
+                    "401": {
                         "description": "Category already exists!"
                     }
                 }
@@ -78,6 +113,9 @@
                 "tags": ["Category"],
                 "summary": "Upload a new category",
                 "description": "Upload a new category",
+                "security": [
+                    {"bearerAuth": []}
+                ],
                 "requestBody": {
                     "content": {
                         "multipart/form-data": {
@@ -105,6 +143,9 @@
                 "tags": ["Specification"],
                 "summary": "Create a specification",
                 "description": "Create a new specification",
+                "security": [
+                    {"bearerAuth": []}
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -122,8 +163,109 @@
                     "201": {
                         "description": "Created"
                     },
-                    "500": {
+                    "401": {
                         "description": "Specification already exists!"
+                    }
+                }
+            }
+        },
+        "/cars": {
+            "post": {
+                "tags": ["Cars"],
+                "summary": "Create a new car",
+                "description": "Create a new car",
+                "security": [
+                    {"bearerAuth": []}
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Car"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Car already exists!"
+                    }
+                }
+            }
+        },
+        "/cars/images/{id}": {
+            "post": {
+                "tags": ["Cars"],
+                "summary": "Upload images to car",
+                "description": "Upload images to car",
+                "security": [
+                    {"bearerAuth": []}
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Car id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "images": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string",
+                                            "format": "binary"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Car already exists!"
+                    }
+                }
+            }
+        },
+        "/rentals": {
+            "post": {
+                "tags": ["Rental"],
+                "summary": "Create a rental",
+                "description": "Create a new rental",
+                "security": [
+                    {"bearerAuth": []}
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Rental"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Rental already exists!"
                     }
                 }
             }
@@ -139,6 +281,57 @@
                 "description": {
                     "type": "string"
                 }
+            }
+        },
+        "Rental": {
+            "type": "object",
+            "properties": {
+                "user_id": {
+                    "type": "string"
+                },
+                "car_id": {
+                    "type": "string"
+                },
+                "expected_return_date": {
+                    "example": "2023-04-22T18:00:000Z",
+                    "type": "string",
+                    "format": "date-time"
+                }
+            }
+        },
+        "Car": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "daily_rate": {
+                    "type": "number"
+                },
+                "license_plate": {
+                    "type": "string"
+                },
+                "fine_amount": {
+                    "type": "number"
+                },
+                "brand": {
+                    "type": "string"
+                },
+                "category_id": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
             }
         }
     }
